[gd_scene load_steps=8 format=3 uid="uid://dlmbj8xep2vn2"]

[ext_resource type="Script" path="res://Main.gd" id="1_k5i26"]
[ext_resource type="PackedScene" uid="uid://dw6y7ab3rrodv" path="res://how_to_play.tscn" id="2_pw8k7"]
[ext_resource type="PackedScene" uid="uid://b6xtgt50mritp" path="res://level_select.tscn" id="3_38fp5"]
[ext_resource type="PackedScene" uid="uid://bbavclhrt4aid" path="res://settings.tscn" id="4_6cvjl"]

[sub_resource type="CanvasTexture" id="CanvasTexture_y05wr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q75ys"]
size = Vector2(14.25, 805.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ns4bm"]
size = Vector2(1170, 15.25)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k5i26")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.984314, 0.615686, 0.396078, 1)
layout_mode = 0
offset_right = 750.0
offset_bottom = 750.0
texture = SubResource("CanvasTexture_y05wr")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-4.125, 348.125)
shape = SubResource("RectangleShape2D_q75ys")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(753.75, 366.75)
shape = SubResource("RectangleShape2D_q75ys")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(576, -3.625)
shape = SubResource("RectangleShape2D_ns4bm")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(574, 752.75)
shape = SubResource("RectangleShape2D_ns4bm")

[node name="HowToPlay" parent="." instance=ExtResource("2_pw8k7")]
visible = false
layout_mode = 1

[node name="LevelSelect" parent="." instance=ExtResource("3_38fp5")]
visible = false
layout_mode = 1

[node name="Settings" parent="." instance=ExtResource("4_6cvjl")]
visible = false
layout_mode = 1

[node name="main_ui" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelsButton" type="Button" parent="main_ui"]
layout_mode = 0
offset_left = 320.0
offset_top = 320.0
offset_right = 431.0
offset_bottom = 360.0
text = "Level Select"

[node name="HowToButton" type="Button" parent="main_ui"]
layout_mode = 0
offset_left = 320.0
offset_top = 376.0
offset_right = 431.0
offset_bottom = 416.0
text = "How To Play"

[node name="QuitButton" type="Button" parent="main_ui"]
layout_mode = 0
offset_left = 320.0
offset_top = 504.0
offset_right = 431.0
offset_bottom = 544.0
text = "Quit"

[node name="SettingsButton" type="Button" parent="main_ui"]
layout_mode = 0
offset_left = 320.0
offset_top = 432.0
offset_right = 431.0
offset_bottom = 472.0
text = "Settings"

[node name="Label" type="Label" parent="main_ui"]
layout_mode = 0
offset_left = 300.0
offset_top = 129.0
offset_right = 456.0
offset_bottom = 172.0
text = "Minesweeper"
horizontal_alignment = 1

[node name="CatfaceContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="spawn_cats" from="Settings" to="." method="_on_settings_spawn_cats"]
[connection signal="pressed" from="main_ui/LevelsButton" to="." method="_on_levels_button_pressed"]
[connection signal="pressed" from="main_ui/HowToButton" to="." method="_on_how_to_button_pressed"]
[connection signal="pressed" from="main_ui/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="main_ui/SettingsButton" to="." method="_on_settings_button_pressed"]
